--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,40 +20,33 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: pieterwbarkema@gmail.com
+phone: 
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
-coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
+  street: 
+  city: London
+  region: 
+  postcode: 
+  country: United Kingdom
+  country_code: UK
 appointment_url: 'https://calendly.com'
 contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/Twitter'
-  - icon: skype
+    link: 'https://twitter.com/pieterbarkema'
+  - icon: google-scholar
+    icon_pack: ai
+    name: My work
+    link: 'https://scholar.google.com/citations?user=fuyD_YcAAAAJ&hl=nl&oi=ao'
+  - icon: github
     icon_pack: fab
-    name: Skype Me
-    link: 'skype:echo123?call'
-  - icon: keybase
+    name: My code
+    link: 'https://github.com/PBarkema'
+  - icon: linkedin
     icon_pack: fab
-    name: Chat on Keybase
-    link: 'https://keybase.io/'
-  - icon: comments
-    icon_pack: fas
-    name: Discuss on Forum
-    link: 'https://discourse.gohugo.io'
+    name: Connect
+    link: 'https://www.linkedin.com/in/pieter-barkema-nl/'
 
 # Site header
 
